# CHANGES TO v0.2.5 #

 * Updated CSVY import to embed variable-level metadata. (#52)
 * Use `urltools::url_parse()` to extract file extensions from complex URLs (e.g., those with query arguments). (#56)
 * Fixed NAMESPACE notes for base packages. (#58)

# CHANGES TO v0.2.4 #

 * Modified behavior so that files imported using haven now store variable metadata at the data.frame level by default (unlike the default behavior in haven, which can cause problems). (#37, h/t Ista Zahn)
 * Added support for importing CSVY (http://csvy.org/) formatted files. (#52)
 * Added import dependency on data.table 1.9.5. (#39)

# CHANGES TO v0.2.2 #

 * Uses the longurl package to expand shortened URLs so that their file type can be easily determined. 

# CHANGES TO v0.2.1 #

 * Improved support for importing from compressed directories, especially web-based compressed directories. (#38)
 * Add import dependency on curl >= 0.6 to facilitate content type parsing and format inference from URL redirects. (#36)
 * Add bit64 to `Suggests` to remove an `import` warning.

# CHANGES TO v0.2 #

 * `import` always returns a data.frame, unless `setclass` is specified. (#22)
 * Added support for import from legacy Excel (.xls) files `readxl::read_excel`, making its use optional. (#19)
 * Added support for import from and export to the system clipboard on Windows and Mac OS.
 * Added support for export to simple XML documents. (#12)
 * Added support for import from simple XML documents via `XML::xmlToDataFrame`. (#12)
 * Added support for import from ODS spreadsheet formats. (#12, h/t Chung-hong Chan)
 * Use `data.table::fread` by default for reading delimited files. (#3)
 * Added support for import and export of `dput` and `dget` objects. (#10)
 * Added support for reading from compressed archives (.zip and .tar). (#7)
 * Added support for writing to fixed-width format. (#8)
 * Set `stringsAsFactors = FALSE` as default for reading tabular data. (#4)